登录页，主页搭建
N/A

Signed-off-by: lizhongqiang <lizhongqiang@xiaomi.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="login">LOGIN</string>
     <string name="Username">Username</string>
     <string name="Password">Password</string>
+
+    <string name="tab_home">小家</string>
+    <string name="tab_personal">我的</string>
 </resources>
